--- a/styles/header.css
+++ b/styles/header.css
@@ -57,3 +57,17 @@
     padding: 1em;
     background-color: var(--branco);
 }
+
+.titulo__cabecalho{
+    display: none;
+}
+@media screen and (min-width: 1024px) {
+    .titulo__cabecalho{
+        font-size: 30px;
+        font-family: var(--font-secundaria);
+        color: rgb(43, 226, 101);
+        display: block;
+    }
+
+}
+    
