--- a/styles/grid.css
+++ b/styles/grid.css
@@ -15,3 +15,21 @@
     margin-bottom: 7px;
     text-align: center;
 }
+
+@media screen and (min-width: 1024px){
+.div-todasimagens{
+    background-color: rgb(188, 154, 221);
+}
+.Imagem{
+    border-top: 10px groove rgb(120, 65, 160);
+    border-left:dotted rgb(231, 217, 12);
+    border-right: 10px solid rgb(214, 117, 177);
+    border-bottom: 10px dashed rgb(65, 65, 187);
+    width: 180px! important;
+    height: 160px! important;
+}
+.titulo{
+    font-size: 20px;
+   
+} 
+}
